Fix spacing

--- a/client/src/components/styles/SearchResults.module.css
+++ b/client/src/components/styles/SearchResults.module.css
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   margin: 10px 0 20px;
-  width: 50%;
+  width: 30%;
   display: flex;
 }
 
